--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ p
 {
     font-size: 24px;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 img
@@ -50,8 +50,8 @@ div
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid;
-    border-left: 5px;
+    border-bottom: 2px solid #FFFFFF;
+    border-left: 5px #FFFFFF;
 }
 
 .blue
@@ -59,8 +59,8 @@ div
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-right: solid 5px;
-    border-top: solid 2px;
+    border-right: solid 5px #FFFFFF;
+    border-top: solid 2px #FFFFFF;
     color: #C4C4C4
 }
 
@@ -76,8 +76,8 @@ div
     background-color: #FFFF00; 
     text-align: right; 
     margin-left: 50px; 
-    border-bottom: solid 2px; 
-    border-left: solid 5px; 
+    border-bottom: solid 2px #FFFFFF; 
+    border-left: solid 5px #FFFFFF; 
 }
 
 .yellow p 
@@ -86,11 +86,11 @@ div
 }
 
 .green {
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: solid 5px;
-    border-top: solid 2px;
+    border-right: solid 5px #FFFFFF;
+    border-top: solid 2px #FFFFFF;
 }
 
 .green p {
