--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,22 @@ div
     min-height: 125px;
 }
 
+.introduction
+{
+    border-radius: 15px;
+    margin-top: 15px;
+    line-height: 2;
+}
+
 .red
 {
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
+    border-top: 0px;
+    border-right: 0px;
     border-bottom: 2px solid #FFFFFF;
-    border-left: 5px #FFFFFF;
+    border-left: 5px solid #FFFFFF;
 }
 
 .blue
@@ -61,6 +70,8 @@ div
     margin-right: 50px;
     border-right: solid 5px #FFFFFF;
     border-top: solid 2px #FFFFFF;
+    border-bottom: 0px;
+    border-left: 0px;
     color: #C4C4C4
 }
 
@@ -78,6 +89,8 @@ div
     margin-left: 50px; 
     border-bottom: solid 2px #FFFFFF; 
     border-left: solid 5px #FFFFFF; 
+    border-top: 0px;
+    border-right: 0px;
 }
 
 .yellow p 
@@ -91,6 +104,8 @@ div
     margin-right: 50px;
     border-right: solid 5px #FFFFFF;
     border-top: solid 2px #FFFFFF;
+    border-bottom: 0px;
+    border-left: 0px;
 }
 
 .green p {
